@@ -1,3 +1,9 @@
+2006-04-25  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: jdahlin
+
+	* tests/test_ObjectList.py: Add tests for list of RadioButtons
+
 2006-04-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/entry.py (KiwiEntry.prefill): Fix exceptions,
